--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -56,7 +56,7 @@ body {
 }
 
 .content .button-secondary {
-	background-color: $color-white;
+	background-color: $color-light-gray;
 	color: $color-black;
 }
 
