--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,8 +1,8 @@
-$color-primary: #0070f3;
+$color-primary: #740001;
 $color-black: #000;
 $color-white: #fff;
 $color-dark-gray: #1f1f1f;
-$color-light-gray: #f2f2f2;
+$color-light-gray: #D3A625;
 $color-mid-gray: #606060;
 
 $font-family: "Public Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
